--- a/python/problem_034.ipynb
+++ b/python/problem_034.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 34\n",
+    "# Problem 34\n",
     "https://projecteuler.net/problem=34"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "0ed3f181",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea30a499",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -30,22 +46,14 @@
     "    fac = 1\n",
     "    for i in range(1, n+1):\n",
     "        fac *= i\n",
-    "    return fac"
+    "    return fac\n",
+    "\n",
+    "assert factorial(5) == 120"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "328c49e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert factorial(5) == 1 * 2 * 3 * 4 * 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "54982c72",
    "metadata": {},
    "outputs": [],
@@ -60,22 +68,14 @@
     "            value += factorial(n)\n",
     "        if x == value:\n",
     "            results.append(value)\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ca799368",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return results\n",
+    "\n",
     "assert sum(digit_factorials([145])) == 145"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "49ae927c",
    "metadata": {},
    "outputs": [
@@ -85,32 +85,61 @@
        "40730"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "sum(digit_factorials(range(3, 1_000_000)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "13c232ba",
+   "execution_count": 5,
+   "id": "7cc58593",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.06 s ± 48.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.52 s ± 42.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum(digit_factorials(range(3, 1_000_000)))\n",
-    "euler.save_benchmark(34, t)"
+    "# benchmark\n",
+    "%timeit sum(digit_factorials(range(3, 1_000_000)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbf8d28",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0ddf4d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.49 s ± 5.08 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o sum(digit_factorials(range(3, 1_000_000)))\n",
+    "import euler\n",
+    "euler.save_benchmark(34, bm)"
    ]
   }
  ],
@@ -130,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
