--- a/python/problem_035.ipynb
+++ b/python/problem_035.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 35\n",
+    "# Problem 35\n",
     "https://projecteuler.net/problem=35"
    ]
   },
@@ -14,41 +14,40 @@
    "execution_count": 1,
    "id": "b572f0e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af455dfd",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60a68c40",
+   "id": "91c4fd67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isprime(n):\n",
-    "    if n <= 1:\n",
-    "        return False\n",
-    "    else:\n",
-    "        for i in range(2, (n//2)+1):\n",
-    "            if n%i == 0:\n",
-    "                return False\n",
-    "        return True"
+    "from sympy import isprime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8227fe9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert isprime(197) == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "6710339d",
    "metadata": {},
    "outputs": [],
@@ -60,43 +59,27 @@
     "    s += s\n",
     "    for i in range(l):\n",
     "        rotations.append(int(s[i:i+l]))\n",
-    "    return rotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9f557103",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return rotations\n",
+    "\n",
     "assert rotation(197) == [197, 971, 719]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cc5b2344",
    "metadata": {},
    "outputs": [],
    "source": [
     "def circular_primes(numbers):\n",
-    "    return all([isprime(x) for x in numbers])"
+    "    return all([isprime(x) for x in numbers])\n",
+    "\n",
+    "assert circular_primes([197, 971, 719])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "73ba52a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert circular_primes([197, 971, 719]) == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "39238b36",
    "metadata": {},
    "outputs": [],
@@ -107,12 +90,14 @@
     "    for p in primes:\n",
     "        if circular_primes(rotation(p)):\n",
     "            counter += 1\n",
-    "    return counter"
+    "    return counter\n",
+    "\n",
+    "assert circulars(100) == 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "eb63d3d1",
    "metadata": {},
    "outputs": [
@@ -122,18 +107,46 @@
        "55"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "circulars(1_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "id": "531c8145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.36 s ± 51.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit circulars(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53e98e69",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5ac16e18",
    "metadata": {},
    "outputs": [
@@ -141,13 +154,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29min 13s ± 1min 39s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.32 s ± 2.79 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o circulars(1_000_000)\n",
-    "euler.save_benchmark(35, t)"
+    "bm = %timeit -o circulars(1_000_000)\n",
+    "import euler\n",
+    "euler.save_benchmark(35, bm)"
    ]
   }
  ],
@@ -167,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
