--- a/julia/problem_036.ipynb
+++ b/julia/problem_036.ipynb
@@ -5,47 +5,71 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 36\n",
+    "# Problem 36\n",
     "https://projecteuler.net/problem=36"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "236042ec",
+   "id": "5fd45dc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fedbf911",
+   "id": "236042ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "is_palindromic (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "is_palindromic(n) = digits(n) == reverse(digits(n)) && digits(n, base=2) == reverse(digits(n, base=2))"
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7c09db6",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "fedbf911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_palindromic(n) = digits(n) == reverse(digits(n)) && digits(n, base=2) == reverse(digits(n, base=2))\n",
+    "\n",
+    "@assert is_palindromic(585)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c55a76fa",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  74.185 ms (6011988 allocations: 317.05 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -57,52 +81,33 @@
     }
    ],
    "source": [
-    "sum(findall(is_palindromic, 1:999_999))"
+    "@btime sum(findall(is_palindromic, 1:999_999))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bc38d7dc",
+   "cell_type": "markdown",
+   "id": "fb2d09d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 54 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m90.075 ms\u001b[22m\u001b[39m … \u001b[35m97.753 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 9.36% … 14.04%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m93.549 ms              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m14.36%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m93.645 ms\u001b[22m\u001b[39m ± \u001b[32m 1.715 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.21% ±  0.77%\n",
-       "\n",
-       "  \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m█\u001b[39m \u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m▃\u001b[34m \u001b[39m\u001b[32m \u001b[39m\u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m█\u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[34m▁\u001b[39m\u001b[32m▇\u001b[39m\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▁\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▁\u001b[39m▇\u001b[39m▇\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▇\u001b[39m▁\u001b[39m▇\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▇\u001b[39m \u001b[39m▁\n",
-       "  90.1 ms\u001b[90m         Histogram: frequency by time\u001b[39m        97.5 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m317.05 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m6011988\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark sum(findall(is_palindromic, 1:999_999))"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "728e57dd",
+   "id": "bc38d7dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(36, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark sum(findall(is_palindromic, 1:999_999))\n",
+    "euler.save_benchmark(36, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -110,7 +115,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
