--- a/python/problem_036.ipynb
+++ b/python/problem_036.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 36\n",
+    "# Problem 36\n",
     "https://projecteuler.net/problem=36"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "9cf46734",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6cbe22",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -37,12 +53,40 @@
     }
    ],
    "source": [
+    "# answer\n",
     "sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "98b2d6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158 ms ± 281 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "182b8124",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b5f75e40",
    "metadata": {},
    "outputs": [
@@ -50,13 +94,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 ms ± 2.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "158 ms ± 176 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])\n",
-    "euler.save_benchmark(36, t)"
+    "bm = %timeit -o sum([i for i in range(1_000_000) if str(i)==str(i)[::-1] and bin(i)[2:]==bin(i)[2:][::-1]])\n",
+    "import euler\n",
+    "euler.save_benchmark(36, bm)"
    ]
   }
  ],
@@ -76,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
