--- a/julia/problem_037.ipynb
+++ b/julia/problem_037.ipynb
@@ -5,24 +5,59 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 37\n",
+    "# Problem 37\n",
     "https://projecteuler.net/problem=37"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "236042ec",
+   "id": "d40cbc84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "236042ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66be6db1",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2e089d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b71b81c4",
    "metadata": {},
    "outputs": [
@@ -49,27 +84,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e9c3a30f",
+   "execution_count": 5,
+   "id": "eb65e775",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "all_primes (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_primes(n) = all(isprime, truncatables(n))"
+    "function truncatables(n)\n",
+    "    nums = []\n",
+    "    for i in 1:ndigits(n)\n",
+    "        d = reverse(digits(n))\n",
+    "        push!(nums, join(d[begin:i]))\n",
+    "        push!(nums, join(d[end-i+1:end]))\n",
+    "    end\n",
+    "    return Set(parse(Int64, num) for num in nums)\n",
+    "end\n",
+    "\n",
+    "@assert truncatables(123) == Set([123, 12, 1, 23, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "e9c3a30f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_primes(n) = all(isprime, truncatables(n))\n",
+    "\n",
+    "@assert all_primes(3797)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "74a151d6",
    "metadata": {},
    "outputs": [
@@ -102,10 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c4135245",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  250.780 ms (10380098 allocations: 399.62 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -117,52 +171,33 @@
     }
    ],
    "source": [
-    "truncatable_primes_sum()"
+    "@btime truncatable_primes_sum()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f8b52e16",
+   "cell_type": "markdown",
+   "id": "ceefbbea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 16 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m317.950 ms\u001b[22m\u001b[39m … \u001b[35m332.123 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m4.95% … 9.21%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m330.717 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m8.86%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m329.837 ms\u001b[22m\u001b[39m ± \u001b[32m  3.252 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m8.64% ± 1.01%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m▄\u001b[39m \u001b[34m▄\u001b[39m\u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▆\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[32m▁\u001b[39m\u001b[39m▆\u001b[39m█\u001b[39m▆\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[39m \u001b[39m▁\n",
-       "  318 ms\u001b[90m           Histogram: frequency by time\u001b[39m          332 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m480.78 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m12271119\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark truncatable_primes_sum()"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "860d3516",
+   "execution_count": 9,
+   "id": "f8b52e16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(37, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark truncatable_primes_sum()\n",
+    "euler.save_benchmark(37, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -170,7 +205,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
