--- a/python/problem_037.ipynb
+++ b/python/problem_037.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 37\n",
+    "# Problem 37\n",
     "https://projecteuler.net/problem=37"
    ]
   },
@@ -14,73 +14,61 @@
    "execution_count": 1,
    "id": "f6eca067",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "194ae403",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60a68c40",
+   "id": "85c5f279",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isprime(n):\n",
-    "    if n <= 1:\n",
-    "        return False\n",
-    "    else:\n",
-    "        for i in range(2, (n//2)+1):\n",
-    "            if n%i == 0:\n",
-    "                return False\n",
-    "        return True"
+    "import sympy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6be8ac76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eratosthenes():\n",
-    "\t'''Yields the sequence of prime numbers via the Sieve of Eratosthenes.'''\n",
-    "\tD = {}  # map composite integers to primes witnessing their compositeness\n",
-    "\tq = 2   # first integer to test for primality\n",
-    "\twhile 1:\n",
-    "\t\tif q not in D:\n",
-    "\t\t\tyield q        # not marked composite, must be prime\n",
-    "\t\t\tD[q*q] = [q]   # first multiple of q not already marked\n",
-    "\t\telse:\n",
-    "\t\t\tfor p in D[q]: # move each witness to its next multiple\n",
-    "\t\t\t\tD.setdefault(p+q,[]).append(p)\n",
-    "\t\t\tdel D[q]       # no longer need D[q], free memory\n",
-    "\t\tq += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a9bae2bf",
+   "id": "7e1944d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def truncatable_primes(n):\n",
-    "    prime = eratosthenes()\n",
     "    counter = 0\n",
     "    primes = []\n",
+    "    prime = 0 # init\n",
     "    while counter < n:\n",
-    "        p = next(prime)\n",
-    "        s = str(p)\n",
-    "        if all([isprime(y) for y in set([int(s[:x]) for x in range(1, len(s)+1)] + [int(s[x:]) for x in range(len(s))])]) and p > 7:\n",
-    "            primes.append(p)\n",
+    "        prime = sympy.nextprime(prime)\n",
+    "        s = str(prime)\n",
+    "        if all([sympy.isprime(y) for y in set([int(s[:x]) for x in range(1, len(s)+1)] + \\\n",
+    "                                              [int(s[x:]) for x in range(len(s))])]) and prime > 7:\n",
+    "            primes.append(prime)\n",
     "            counter += 1\n",
     "    return sum(primes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ce0e9940",
    "metadata": {},
    "outputs": [
@@ -90,32 +78,61 @@
        "748317"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "truncatable_primes(11) # 2, 3, 5 and 7 are not considered to be truncatable primes."
+    "# answer\n",
+    "truncatable_primes(11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "67da81b8",
+   "execution_count": 5,
+   "id": "95109492",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5min 27s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "981 ms ± 149 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o -n1 -r1 truncatable_primes(11)\n",
-    "euler.save_benchmark(37, t)"
+    "# benchmark\n",
+    "%timeit truncatable_primes(11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a2c6c16",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "17d9f78d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "884 ms ± 32 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o truncatable_primes(11)\n",
+    "import euler\n",
+    "euler.save_benchmark(37, bm)"
    ]
   }
  ],
@@ -135,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
