--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 μs ± 160 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "102 μs ± 2.6 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -163,13 +163,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.59 ms ± 64.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.81 ms ± 463 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
     "%timeit sum([1 for (d, dn) in zip(pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day.values, pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day_name()) if d == 1 and dn == \"Sunday\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b98c7be",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (calendar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "24407d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import calendar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ab68ee24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_sundays(start_year, end_year):\n",
+    "\n",
+    "    sundays_on_first_total = 0\n",
+    "\n",
+    "    # Loop through each year from start_year to end_year\n",
+    "    for year in range(start_year, end_year+1):\n",
+    "\n",
+    "        # Loop through each month of the year\n",
+    "        for month in range(1, 13):\n",
+    "\n",
+    "            # Get the weekday of the first day of the month\n",
+    "            first_day_weekday = calendar.weekday(year, month, 1)\n",
+    "            \n",
+    "            # Check if the first day is a Sunday (where 6 represents Sunday)\n",
+    "            if first_day_weekday == 6:\n",
+    "                sundays_on_first_total += 1\n",
+    "    \n",
+    "    return sundays_on_first_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5cf64cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "171"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "count_sundays(1901, 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "430882d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "197 μs ± 2.46 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit count_sundays(1901, 2000)"
    ]
   },
   {
@@ -182,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "e86968f9",
    "metadata": {},
    "outputs": [
@@ -190,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104 μs ± 1.77 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "104 μs ± 1.88 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
